--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -57,6 +57,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="powa"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark">
@@ -71,6 +72,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="saps"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark" />
@@ -85,6 +87,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="0115916803"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -98,6 +101,7 @@
                 android:layout_height="15dp"
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
+                android:fontFamily="sans-serif"
                 android:layout_weight="2"
                 android:text="10111"
                 android:textAlignment="center"
@@ -135,6 +139,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="cell phone emergency"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -149,6 +154,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="Ambulance"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -163,6 +169,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="112"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -177,6 +184,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="10177"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -211,6 +219,7 @@
                 android:layout_height="15dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="Dr Reddy's help line"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -225,6 +234,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="Destiny Helpline"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -239,6 +249,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="0800205026"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark">
@@ -253,6 +264,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="0800414243"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark" />
@@ -285,6 +297,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="Department of social Devlopment Substance abuse"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -299,6 +312,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="Sucide Crisis line"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -314,6 +328,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="0800121314"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark">
@@ -328,6 +343,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="0800567567"
+                android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark" />
@@ -360,6 +376,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="SADAG Mental Health line"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -374,6 +391,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="Akeso Pyschiatric response"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -388,6 +406,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="0112344837"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -402,6 +421,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:fontFamily="sans-serif"
                 android:text="0861435787"
                 android:textAlignment="center"
                 android:textAllCaps="true"
