--- a/app/src/main/res/layout/list_item_places.xml
+++ b/app/src/main/res/layout/list_item_places.xml
@@ -24,6 +24,7 @@
         android:layout_marginStart="14dp"
         android:layout_marginEnd="14dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif"
         android:layout_toEndOf="@id/imageView2"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -37,6 +38,7 @@
         android:layout_below="@+id/textView_name"
         android:layout_marginStart="14dp"
         android:layout_marginEnd="14dp"
+        android:fontFamily="sans-serif"
         android:layout_marginTop="4dp"
         android:layout_toEndOf="@id/imageView2"
         android:freezesText="false"
