--- a/app/src/main/res/layout/abuse_layout1.xml
+++ b/app/src/main/res/layout/abuse_layout1.xml
@@ -63,6 +63,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="10dp"
                     android:text="Seth Markus"
+                    android:fontFamily="sans-serif"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@android:color/black"
                     android:textStyle="normal" />
@@ -71,6 +72,7 @@
                 <TextView
                     android:id="@+id/txt_abuse_desc"
                     android:layout_width="353dp"
+                    android:fontFamily="sans-serif"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
                     android:layout_marginStart="16dp"
