--- a/app/src/main/res/layout/activity_abuse.xml
+++ b/app/src/main/res/layout/activity_abuse.xml
@@ -40,6 +40,7 @@
                 android:layout_width="353dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:fontFamily="sans-serif"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:text="Seth Markus"
@@ -51,6 +52,7 @@
             <TextView
                 android:id="@+id/txt_abuse_desc"
                 android:layout_width="353dp"
+                android:fontFamily="sans-serif"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:layout_marginStart="16dp"
