--- a/app/src/main/res/layout/activity_institution.xml
+++ b/app/src/main/res/layout/activity_institution.xml
@@ -10,6 +10,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fontFamily="sans-serif"
         android:id="@+id/listInstitution">
 
     </ListView>
