--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -46,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="12.15"
                 android:text="Grace Mathole"
+                android:fontFamily="sans-serif"
                 android:layout_marginStart="25dp"
                 android:layout_gravity="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
