--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -21,6 +21,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:divider="#b5b5b5"
+            android:fontFamily="sans-serif"
             android:dividerHeight="1dp"
             android:listSelector="@drawable/list_selector"
             android:layout_alignParentStart="true" />
