--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:text="@string/one"
         android:textSize="40dp"
+        android:fontFamily="sans-serif"
         android:textStyle="bold"
         android:layout_centerInParent="true"/>
 
