--- a/app/src/main/res/layout/layout_signin.xml
+++ b/app/src/main/res/layout/layout_signin.xml
@@ -49,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password"
+        android:fontFamily="sans-serif"
         android:textColor="#FFF"
         android:onClick="forgotPassword"/>
 
@@ -58,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@null"
+        android:fontFamily="sans-serif"
         android:text="Sign in"
         android:textColor="#FFF"
         android:textSize="30sp" />
