--- a/app/src/main/res/layout/layout_signup.xml
+++ b/app/src/main/res/layout/layout_signup.xml
@@ -48,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Mobile Number"
+            android:fontFamily="sans-serif"
             android:inputType="phone"
             android:textColor="#FFFFFF" />
     </android.support.design.widget.TextInputLayout>
@@ -58,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@null"
+        android:fontFamily="sans-serif"
         android:text="Sign up"
         android:textColor="#FFF"
         android:textSize="30sp" />
