--- a/app/src/main/res/layout/list_abuse.xml
+++ b/app/src/main/res/layout/list_abuse.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:gravity="center"
+        android:fontFamily="sans-serif"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textColor="@android:color/black"
         android:textStyle="normal"
