--- a/app/src/main/res/layout/mentors_card_view.xml
+++ b/app/src/main/res/layout/mentors_card_view.xml
@@ -35,6 +35,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Seth Markus"
+                android:fontFamily="sans-serif"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/black"
                 android:textStyle="normal" />
@@ -45,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:layout_weight="1"
+                android:fontFamily="sans-serif"
                 android:text="Innovation hub"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                 android:textColor="@android:color/black">
