--- a/app/src/main/res/layout/profile_update.xml
+++ b/app/src/main/res/layout/profile_update.xml
@@ -54,6 +54,7 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
                     android:textColorHint="@color/colorPrimary"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -67,6 +68,7 @@
                         android:hint="Username"
                         android:textSize="16dp"
                         android:inputType="text"
+                        android:fontFamily="sans-serif"
                         android:textColor="@color/colorPrimaryDark"
                         tools:text="Thabang" />
                     />
@@ -79,6 +81,7 @@
                     android:textColorHint="@color/colorPrimary"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
+                    android:fontFamily="sans-serif"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
 
@@ -87,6 +90,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Bio"
+                        android:fontFamily="sans-serif"
                         android:textSize="16dp"
                         android:inputType="textMultiLine"
                         android:textColor="@color/colorPrimaryDark"
@@ -102,6 +106,7 @@
                     android:layout_marginTop="10dp"
                     android:text="Contact Details"
                     android:textAlignment="center"
+                    android:fontFamily="sans-serif"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                     android:textColorHint="@color/colorPrimary"
                     android:textColor="@color/colorPrimaryDark"
@@ -133,6 +138,7 @@
                             android:textColor="@color/colorPrimary"
                             android:inputType="phone"
                             android:textSize="16dp"
+                            android:fontFamily="sans-serif"
                             android:layout_marginBottom="10dp"
                             android:layout_marginRight="30dp"
                             android:layout_marginLeft="15dp"
@@ -162,6 +168,7 @@
                             android:layout_marginBottom="10dp"
                             android:layout_marginTop="10dp"
                             android:layout_weight="1"
+                            android:fontFamily="sans-serif"
                             android:textColor="@color/colorPrimaryDark"
                             tools:text="edith@childtraumacentre.co.za">
 
