--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -2,9 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_selector"
     android:orientation="horizontal"
     android:padding="5dip" >
+
+
+	<!--    android:background="@drawable/list_selector"  insert into the code above -->
 
 	<!--  ListRow Left sied Thumbnail image -->
 	<LinearLayout android:id="@+id/thumbnail"
