--- a/app/src/main/res/layout/layout_signup.xml
+++ b/app/src/main/res/layout/layout_signup.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccentTrans"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="48dp">
@@ -12,7 +11,7 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="#FFF">
+        android:textColorHint="@color/text_color_white">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/text_input_signup_email"
@@ -20,14 +19,14 @@
             android:layout_height="wrap_content"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textColor="#FFFFFF" />
+            android:textColor="@color/text_color_white" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:textColorHint="#FFF">
+        android:textColorHint="@color/text_color_white">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/text_input_signup_password"
@@ -35,30 +34,35 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textColor="#FFFFFF" />
+            android:textColor="@color/text_color_white" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:textColorHint="#FFF">
+        android:textColorHint="@color/text_color_white">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Mobile Number"
             android:inputType="phone"
-            android:textColor="#FFFFFF" />
+            android:textColor="@color/text_color_white" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btnSignup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@null"
         android:text="Sign up"
-        android:textColor="#FFF"
-        android:textSize="30sp" />
+        android:textColor="@color/text_color_white"
+        android:textSize="20sp"
+        android:layout_marginTop="60dp"
+        android:layout_width="240dp"
+        android:layout_height="45dp"
+        android:background="@drawable/buttonshape1"
+        android:shadowColor="#FFFFFF"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="0"
+        />
 </LinearLayout>
