ubpaded abuse information

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
+            android:textSize="14sp"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/black"
@@ -49,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:fontFamily="sans-serif"
+                android:textSize="14sp"
                 android:layout_weight="1"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                 android:textColor="@android:color/black"
