--- a/app/src/main/res/layout/activity_institution.xml
+++ b/app/src/main/res/layout/activity_institution.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fontFamily="sans-serif"
+        android:textAlignment="center"
         android:id="@+id/listInstitution">
 
     </ListView>
