--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -33,8 +33,8 @@
         android:text="Rihanna Love the way lie"
 		android:paddingTop="10dp"
         android:textColor="#040404"
-        android:typeface="sans" 
-        android:textSize="15dip"
+        android:typeface="sans"
+		android:textSize="14sp"
         android:textStyle="bold"/>
 
 	<!-- Artist Name -->
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvRoomName"
         android:textColor="#343434"
-        android:textSize="10dip"
+		android:textSize="14sp"
 		android:fontFamily="sans-serif"
         android:layout_marginTop="1dip"
         android:layout_toRightOf="@+id/thumbnail"
