--- a/app/src/main/res/layout/abuse_layout1.xml
+++ b/app/src/main/res/layout/abuse_layout1.xml
@@ -64,6 +64,7 @@
                     android:layout_marginTop="10dp"
                     android:text="Seth Markus"
                     android:fontFamily="sans-serif"
+                    android:textSize="16sp"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@android:color/black"
                     android:textStyle="normal" />
@@ -76,6 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
                     android:layout_marginStart="16dp"
+                    android:textSize="14sp"
                     android:layout_weight="1"
                     android:text="Innovation hub"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
