--- a/app/src/main/res/layout/activity_abuse.xml
+++ b/app/src/main/res/layout/activity_abuse.xml
@@ -44,6 +44,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:text="Seth Markus"
+                android:textSize="14sp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/black"
                 android:textStyle="normal" />
@@ -57,6 +58,7 @@
                 android:layout_gravity="top"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
+                android:textSize="14sp"
                 android:text="Innovation hub"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                 android:textColor="@android:color/black">
