--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -57,6 +57,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="powa"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -72,6 +73,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="saps"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -87,6 +89,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="0115916803"
                 android:textAlignment="center"
@@ -101,6 +104,7 @@
                 android:layout_height="15dp"
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:layout_weight="2"
                 android:text="10111"
@@ -139,6 +143,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="cell phone emergency"
                 android:textAlignment="center"
@@ -154,6 +159,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="Ambulance"
                 android:textAlignment="center"
@@ -169,6 +175,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="112"
                 android:textAlignment="center"
@@ -184,6 +191,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="10177"
                 android:textAlignment="center"
@@ -220,6 +228,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:fontFamily="sans-serif"
+                android:textSize="14sp"
                 android:text="Dr Reddy's help line"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -234,6 +243,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="Destiny Helpline"
                 android:textAlignment="center"
@@ -249,6 +259,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="0800205026"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -264,6 +275,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="0800414243"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -297,6 +309,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="Department of social Devlopment Substance abuse"
                 android:textAlignment="center"
@@ -312,6 +325,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="Sucide Crisis line"
                 android:textAlignment="center"
@@ -328,6 +342,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="0800121314"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -343,6 +358,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
                 android:text="0800567567"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -376,6 +392,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="SADAG Mental Health line"
                 android:textAlignment="center"
@@ -391,6 +408,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="Akeso Pyschiatric response"
                 android:textAlignment="center"
@@ -406,6 +424,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="0112344837"
                 android:textAlignment="center"
@@ -421,6 +440,7 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_weight="2"
+                android:textSize="14sp"
                 android:fontFamily="sans-serif"
                 android:text="0861435787"
                 android:textAlignment="center"
