--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -73,6 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/black"
                 android:textSize="14sp"
@@ -93,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:fontFamily="sans-serif"
                 android:text="Description"
                 android:textSize="14sp"
@@ -106,9 +108,12 @@
                 android:layout_height="match_parent"
                 android:fontFamily="sans-serif"
                 android:textSize="14sp"
+                android:gravity="left"
+                android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:text="hy" />
 
         </LinearLayout>
