--- a/app/src/main/res/layout/activity_abuse_type.xml
+++ b/app/src/main/res/layout/activity_abuse_type.xml
@@ -1,18 +1,18 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbarAlwaysDrawVerticalTrack="true"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context="com.irinnovative.onepagesigninsignup.activity.AbuseActivity">
+    tools:context="com.irinnovative.onepagesigninsignup.activity.AbuseTypeActivity">
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/card_recycler_view"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:scrollbars="vertical"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:fontFamily="sans-serif"
+        android:id="@+id/card_list_view">
 
-</ScrollView>
+    </ListView>
+
+</LinearLayout>
