--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -11,15 +11,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:title="Institutions"
-            app:titleTextColor="@android:color/white" />
 
         <ImageSwitcher
             android:id="@+id/hotel_image_switch"
@@ -27,8 +18,8 @@
             android:layout_height="250dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:animationCache="true"
-            android:background="#000"></ImageSwitcher>
+            android:animationCache="true">
+        </ImageSwitcher>
 
 
         <LinearLayout
@@ -83,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 tools:text="012 456 98775" />
 
@@ -105,15 +96,17 @@
                 android:fontFamily="sans-serif"
                 android:text="Description"
                 android:textSize="16dp"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
 
             <TextView
                 android:id="@+id/txt_hotel_desc"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="match_parent"
                 android:fontFamily="sans-serif"
                 android:textSize="16dp"
+                android:textColor="@color/black"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:text="hy" />
