--- a/app/src/main/res/layout/list_item_places.xml
+++ b/app/src/main/res/layout/list_item_places.xml
@@ -24,6 +24,7 @@
         android:layout_marginStart="14dp"
         android:layout_marginEnd="14dp"
         android:layout_marginTop="8dp"
+        android:textColor="@color/black"
         android:fontFamily="sans-serif"
         android:layout_toEndOf="@id/imageView2"
         android:textSize="16sp"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView_name"
         android:layout_marginStart="14dp"
+        android:textColor="@color/black"
         android:layout_marginEnd="14dp"
         android:fontFamily="sans-serif"
         android:layout_marginTop="4dp"
