--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -60,7 +60,7 @@
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -75,7 +75,7 @@
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
 
@@ -91,7 +91,7 @@
                 android:text="0115916803"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -106,7 +106,7 @@
                 android:text="10111"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
 
@@ -143,7 +143,7 @@
                 android:text="cell phone emergency"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -158,7 +158,7 @@
                 android:text="Ambulance"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
         <TableRow>
@@ -173,7 +173,7 @@
                 android:text="112"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -188,7 +188,7 @@
                 android:text="10177"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
 
@@ -223,7 +223,7 @@
                 android:text="Dr Reddy's help line"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -238,7 +238,7 @@
                 android:text="Destiny Helpline"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
         <TableRow>
@@ -252,7 +252,7 @@
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -267,7 +267,7 @@
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
         <TableRow>
@@ -301,7 +301,7 @@
                 android:text="Department of social Devlopment Substance abuse"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -316,7 +316,7 @@
                 android:text="Sucide Crisis line"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
         <TableRow>
@@ -331,7 +331,7 @@
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -346,7 +346,7 @@
                 android:fontFamily="sans-serif"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
         <TableRow>
@@ -380,7 +380,7 @@
                 android:text="SADAG Mental Health line"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -395,7 +395,7 @@
                 android:text="Akeso Pyschiatric response"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
         <TableRow>
@@ -410,7 +410,7 @@
                 android:text="0112344837"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/black">
 
             </TextView>
 
@@ -425,7 +425,7 @@
                 android:text="0861435787"
                 android:textAlignment="center"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/black" />
         </TableRow>
 
 
