--- a/app/src/main/res/drawable-hdpi/buttonshape1.xml
+++ b/app/src/main/res/drawable-hdpi/buttonshape1.xml
@@ -13,11 +13,11 @@
         android:bottom="0dp"
         />
     <size
-        android:width="270dp"
+        android:width="300dp"
         android:height="60dp"
         />
     <stroke
         android:width="3dp"
-        android:color="#FFFFFF"
+        android:color="#27D6CC"
         />
 </shape>
