--- a/app/src/main/res/drawable-hdpi/buttonshape.xml
+++ b/app/src/main/res/drawable-hdpi/buttonshape.xml
@@ -4,7 +4,7 @@
         android:radius="100dp"
         />
     <solid
-        android:color="#FFFFFF"
+        android:color="#20B2AA"
         />
     <padding
         android:left="0dp"
@@ -13,11 +13,11 @@
         android:bottom="0dp"
         />
     <size
-        android:width="270dp"
+        android:width="300dp"
         android:height="60dp"
         />
     <stroke
         android:width="3dp"
-        android:color="#000000"
+        android:color="#27D6CC"
         />
 </shape>
