--- a/app/src/main/res/layout/activity_phone_signin.xml
+++ b/app/src/main/res/layout/activity_phone_signin.xml
@@ -16,10 +16,8 @@
 
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/signin_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/text_color"
         android:layout_marginTop="30dp">
 
         <android.support.design.widget.TextInputEditText
@@ -34,7 +32,6 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/text_color"
         android:layout_marginTop="30dp">
 
         <android.support.design.widget.TextInputEditText
@@ -71,35 +68,33 @@
 
     <Button
         android:id="@+id/btn_phone_signin"
-        android:text="Verify"
-        android:textAllCaps="false"
-        android:layout_marginTop="10dp"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:layout_width="150dp"
+        android:layout_width="217dp"
         android:layout_height="45dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/buttonshape"
         android:shadowColor="#A8A8A8"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="0"
-        />
+        android:text="Verify"
+        android:textAllCaps="false"
+        android:textColor="@color/text_color_white"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btn_done_signin"
-        android:text="Done"
-        android:textAllCaps="false"
-        android:layout_marginTop="10dp"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:layout_width="150dp"
+        android:layout_width="219dp"
         android:layout_height="45dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/buttonshape"
         android:shadowColor="#A8A8A8"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="0"
-        />
+        android:text="Done"
+        android:textAllCaps="false"
+        android:textColor="@color/text_color_white"
+        android:textSize="20sp" />
 
 
 
