--- a/app/src/main/res/layout/abuse_layout1.xml
+++ b/app/src/main/res/layout/abuse_layout1.xml
@@ -72,18 +72,19 @@
 
                 <TextView
                     android:id="@+id/txt_abuse_desc"
-                    android:layout_width="353dp"
-                    android:fontFamily="sans-serif"
+                    android:layout_width="340dp"
+                    android:padding="10dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginRight="18dp"
                     android:layout_marginLeft="16dp"
-                    android:textSize="14sp"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginStart="16dp"
                     android:layout_weight="1"
+                    android:fontFamily="sans-serif"
                     android:text="Innovation hub"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
-                    android:textColor="@android:color/black">
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp">
 
                 </TextView>
 
