--- a/app/src/main/res/layout/list_abuse.xml
+++ b/app/src/main/res/layout/list_abuse.xml
@@ -8,12 +8,11 @@
 
     <ImageView
         android:id="@+id/icon_abuse"
-        android:layout_width="30dp"
-        android:layout_height="97dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
 
-        android:layout_marginLeft="20dp"
         android:layout_weight="0.25"
-        android:layout_marginBottom="30dp"
+        android:layout_margin="5dp"
         tools:src="@drawable/grace" />
 
     <TextView
